--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>prock-to-the-moon-shot</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="prock-to-the-moon-shot" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <title>Poop Rocket ($PROCK) - From the toilet to the moon</title>
+    <meta name="description" content="Join the $PROCK revolution — from the toilet to the moon. The meme coin that's flushing conventional crypto down the drain." />
+    <meta property="og:title" content="Poop Rocket ($PROCK) - From the toilet to the moon" />
+    <meta property="og:description" content="Join the $PROCK revolution — from the toilet to the moon. The meme coin that's flushing conventional crypto down the drain." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
+    <meta property="og:url" content="https://www.pooprocket.fun/" />
+    <meta property="og:image" content="/assets/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Poop Rocket ($PROCK) - From the toilet to the moon" />
+    <meta name="twitter:description" content="Join the $PROCK revolution — from the toilet to the moon. The meme coin that's flushing conventional crypto down the drain." />
+    <meta name="twitter:image" content="/assets/logo.png" />
   </head>
 
   <body>
