--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poop Rocket ($PROCK) - From the toilet to the moon</title>
     <meta name="description" content="Join the $PROCK revolution — from the toilet to the moon. The meme coin that's flushing conventional crypto down the drain." />
